# cpp_practice

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  cmake_commands.txt  color.text  run_script.sh  test.txt
include/: IStreamInsertable.hpp  constants.hpp
src/: CMakeLists.txt  IStreamInserable.cpp  main.cpp
src/practice_files/: CMakeLists.txt  array.cpp  binary.cpp  calc.cpp  concepts.cpp  controlFlow.cpp  coutManip.cpp  enum.cpp  exercise.cpp  functions.cpp  functions_misfit.cpp  inline_vs_namespace.cpp  lambda.cpp  loop.cpp  namespace.cpp  pointer.cpp  references.cpp  strings.cpp  template.cpp  types.cpp  unix_time.cpp
src/practice_files/class_template/: CMakeLists.txt  class_template.cpp  data_wrapper.cpp
src/practice_files/class_template/include/: class_template.hpp  data_wrapper.hpp  person.hpp
src/practice_files/exception_handling/: CMakeLists.txt  costume_exception.cpp  exception.cpp
src/practice_files/exception_handling/include/: costume_exception.hpp  exception.hpp
src/practice_files/function_like_entities/: CMakeLists.txt  function_entities.cpp
src/practice_files/function_like_entities/include/: function_entities.hpp
src/practice_files/include/: array.h  binary.hpp  calc.h  concepts.h  controlFlow.hpp  coutManip.h  enum.hpp  exercise.hpp  functions.hpp  functions_misfit.hpp  inline_vs_namespace.hpp  lambda.hpp  namespace.h  namespace.hpp  pointer.h  references.hpp  strings.h  template.h  types.hpp  unix_time.h  unix_time.hpp
src/practice_files/oop/: CMakeLists.txt  class.cpp  cylinder.cpp  engineer.cpp  person.cpp  point.cpp
src/practice_files/oop/include/: class.h  class.hpp  cylinder.h  cylinder.hpp  engineer.h  engineer.hpp  person.h  person.hpp  point.h  point.hpp
src/practice_files/operator_overloading/: CMakeLists.txt  operator_overloading.cpp  point-ov.cpp
src/practice_files/operator_overloading/include/: operator_overloading.h  operator_overloading.hpp  operators_util.h  operators_util.hpp  point-ov.h  point-ov.hpp
src/practice_files/rvalue/: CMakeLists.txt  rvalue.cpp  rvalue_data_wrapper.cpp
src/practice_files/rvalue/include/: rvalue.hpp  rvalue_data_wrapper.hpp
src/practice_files/smart_pointer/: CMakeLists.txt  cat.cpp  smart_pointers.cpp
src/practice_files/smart_pointer/include/: cat.h  cat.hpp  smart_pointers.h  smart_pointers.hpp
src/practice_files/stl/: CMakeLists.txt  stl_func.cpp
src/practice_files/stl/include/: stl_func.hpp
src/practice_files/three_way_operator/: CMakeLists.txt  item.cpp  three_way.cpp
src/practice_files/three_way_operator/include/: item.h  item.hpp  three_way.h  three_way.hpp
